# libmysql

./: .gitignore  CMakeLists.txt  CMakePlatformTests.txt  dist.info
cmake/: configure.cmake
extlib/dbug/: CMakeLists.txt
extlib/regex/: CMakeLists.txt  regex2.h
extlib/yassl/: CMakeLists.txt
extlib/yassl/include/: config.h
extlib/yassl/src/: yassl_imp.cpp
extlib/yassl/taocrypt/: CMakeLists.txt
extlib/yassl/taocrypt/include/: runtime.hpp
extlib/zlib/: CMakeLists.txt
include/: config-win.h  my_config.h  my_config.h.in  my_dbug.h  my_global.h
libmysql/: CMakeLists.txt  libmysql.def
mysql_config/: CMakeLists.txt  mysql_config.c.in
mysys/: CMakeLists.txt  my_clock.c  stacktrace.c
strings/: CMakeLists.txt  dtoa.c
tests/: CMakeLists.txt
unittest/examples/: CMakeLists.txt
unittest/libmysql/: CMakeLists.txt
unittest/mysys/: CMakeLists.txt
unittest/mytap/: CMakeLists.txt
vio/: CMakeLists.txt
